# arabic-morphophon

./: # Code Citations.md  .gitignore  .zenodo.json  CITATION.bib  CITATION_README.md  CONTRIBUTING.md  Dockerfile  ENCODING_FIX_REPORT.md  ENGINE_ANALYSIS_REPORT.md  ENGINE_COMPATIBILITY_SUMMARY.md  GITHUB_SETUP_GUIDE.md  HIERARCHICAL_SYSTEM_COMPLETION_REPORT.md  IMPLEMENTATION_SUCCESS.md  LICENSE  PERMANENT_SOLUTION.md  PROGRESSIVE_SYSTEM_FIXED.md  PROGRESSIVE_SYSTEM_GUIDE.md  PROJECT_COMPLETION_REPORT.md  QUICK_FIX_SUMMARY.md  README.md  SECURITY.md  SafePowerShell.bat  Untitled-1.txt  WINSURF_CONFLICT_RESOLUTION_REPORT.md  app.py  arabic_analysis_report.html  bench-1.txt  bootstrap.ps1  bytest-1.txt  demo_hierarchical_system.py  demo_progressive.py  engine_analysis_report_20250723_145042.json  final_status_report.py  i want to generate for me best prac.txt  integration_guide.md  official-1.txt  project_config.json  project_init.py  pyproject.toml  requirements-dev.txt  (+17 more)
.github/: # Development dependencies.txt  CICD_SETUP_GUIDE.md  [build-system].txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  cicd.yml  dependencies.yml  security.yml
api/: __init__.py  advanced_routes.py  requirements.txt  routes.py
api/rest/: app.py
arabic_morphophon/: __init__.py
arabic_morphophon/data/: linguistic_templates.json
arabic_morphophon/phonology/: __init__.py  normalizer.py
arabic_phonology_engine_new/: # Example structure for your hybrid proj.txt  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
arabic_phonology_engine_new/config/: development.py
arabic_phonology_engine_new/scripts/: deploy.py
arabic_phonology_engine_new/src/arabic_phonology/: __init__.py
arabic_phonology_engine_new/src/arabic_phonology/analysis/: __init__.py  analyzer.py  classifier.py  import pytest.py  normalizer.py  phoneme_registry.py  syllabifier.py  syllable_encoder.py  unified.py  utils.py
arabic_phonology_engine_new/src/arabic_phonology/core/: __init__.py  engine.py
arabic_phonology_engine_new/src/arabic_phonology/data/: __init__.py  phoneme_db.py
arabic_phonology_engine_new/src/arabic_phonology/web/: __init__.py  api.py
arabic_phonology_engine_new/tests/: __init__.py
arabic_phonology_engine_new/tests/integration/: __init__.py  test_api.py
arabic_phonology_engine_new/tests/unit/: test_analyzer.py  test_engine.py
arabic_phonology_engine_new/tools/: cleanup.py  orchestrator.py  project_optimizer.py  verification.py
archive/: # Core dependencies.txt  README.md  bench-1.txt  bytest-1.txt  frontend.html  🏆 MorphophonologicalEngine (MASTER).txt
core/: engine_loader.py  mathematical_framework.py
core/data_flow/: pipeline_orchestrator.py
deployment/: README.md
deployment/configs/: .flake8  .gitignore  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_professional.txt  requirements_v3.txt
deployment/docker/: .dockerignore  Dockerfile.enterprise  Dockerfile.professional  docker-compose.production.yml  kubernetes-deployment.yml
deployment/scripts/: run_platform_silent.bat  run_tracer.ps1  setup.py
docs/: INDEX.md  README.md
docs/architecture/: HIERARCHICAL_STRUCTURE.json
docs/deployment/: README.md
docs/development/: README.md
docs/guides/: CONTRIBUTING.md  README.md  README_WORD_TRACER.md  SECURITY.md
docs/notebooks/: flask_jsonify_fix.ipynb  sprint1_implementation.ipynb
docs/reports/: REORGANIZATION_REPORT.json  api_report.json  architecture_summary.json  dependency_report.json  emergency_cleanup_report.json  engines_report.json  optimized_test_report.json  project_hierarchy_report.json  test_report.json
docs/testing/: README.md
engines/: .dockerignore  .env.example  .pylintrc  ARABIC_FUNCTION_WORDS_ANALYSIS_REPORT.md  ARABIC_INTERROGATIVE_EXECUTIVE_SUMMARY.md  ARABIC_INTERROGATIVE_PRONOUNS_FINAL_REPORT.md  ARABIC_MATH_GENERATOR_COMPLETION_REPORT.json  ARABIC_MATH_GENERATOR_EXECUTIVE_SUMMARY.md  ARABIC_PRONOUNS_ANALYSIS_REPORT.md  ARABIC_PRONOUNS_ENHANCED_ANALYSIS_REPORT.md  ARABIC_RELATIVE_PRONOUNS_ANALYSIS_REPORT.md  ARABIC_SYLLABLE_GENERATION_REPORT.md.CANCELLED  ARABIC_VERB_CONJUGATION_FINAL_REPORT.md  CITATION.bib  CITATION.cff  CITATION_ANALYSIS_REPORT.md  CITATION_DEPLOYMENT_GUIDE.md  CITATION_README.md  CITATION_VALIDATION_REPORT.md  COMPREHENSIVE_DEPENDENCY_ANALYSIS.md  CRITICAL_REORGANIZATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DIRECTORY_ORGANIZATION_PLAN.md  DOCKER-NPM.md  EMERGENCY_REORGANIZATION_SUCCESS.md  EXECUTIVE_SUMMARY.md  EXPERT_REORGANIZATION_PLAN.md  FINAL_CODE_QUALITY_REPORT.md  FORENSIC_AUDIT_REPORT.md  FUNCTION_WORDS_PROJECT_SUMMARY.md  HARAKAT_ENGINE_DOCUMENTATION.md  HIERARCHICAL_ARABIC_IMPLEMENTATION_REPORT.md  ILAL_IBDAL_FINAL_REPORT.md  LOCAL_DEVELOPMENT.md  MISSING_SINGLE_WORD_ANALYSIS.md  MORPHOLOGICAL_WEIGHTS_PHASE2_REPORT.md  PHASE_3_SUCCESS_SUMMARY.md  PHONOLOGY_UNIFICATION_REPORT.md.CANCELLED  PRODUCTION_README.md  (+249 more)
engines/archive/: backup_unified_plugin_manager.py
engines/backend/: Dockerfile  requirements.txt
engines/core/: __init__.py  base_engine.py  config.py  engine.py  hierarchical_graph_engine.py  inflection.py  morphology.py  phonology.py  unified_arabic_engine.py
engines/data-engine/: DATA_INDEX.md  LINGUISTIC_ACCURACY_REPORT.md
engines/experimental/: ARABIC_MATH_GENERATOR_COMPLETION_REPORT.py  advanced_arabic_function_words_generator.py  advanced_arabic_phonology_system.py  advanced_arabic_proper_names_generator.py  advanced_arabic_vector_generator.py  advanced_ast_syntax_fixer.py  advanced_complex_word_demo.py  arabic_demonstrative_evaluation.py  arabic_demonstrative_pronouns_deep_model.py  (+14 more)
phonology/: analyzer.py  classifier.py  syllable_encoder.py
safe_workspace/: README.md
src/: README.md
templates/: index.html  index_dynamic.html
tests/: README.md  __init__.py  conftest.py
tools/: README.md
utils/: __init__.py  flask_utils.py  json_encoder.py  qa_standards.py  winsurf_safe_strings.py
(+837 files in other folders)
